fix: make dark mode bg not so dark

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --color-dark: #121212; /* Dark mode background */
+  --color-dark: #262626; /* Dark mode background */
   --color-light: #f5f5f5; /* Light mode background */
   --color-text-light: #121212; /* Text color for light mode */
   --color-text-dark: #f5f5f5; /* Text color for dark mode */
